test_cases/positive/label.snek
base = Image("quay.io/toolbx-images/alpine-toolbox:latest");
echo = base > Exec("echo hello");
export DEFAULT = echo > Exec("sleep 5");
