test_cases/negative/double_return.snek
def Foo(value) {
    return value > Exec("hello");
    return value > Exec("hello");
}

export DEFAULT = Foo(Image("alpine:latest"));
